Cleaning up some deprecated calls and troubleshooting some VPS comparisons